<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/titlefall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/fall_details"
        android:textSize="20sp"
        android:textStyle="bold" >
    </TextView>

    <RelativeLayout
        android:id="@+id/relativelayoutfall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/thumbNailFallDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_margin="18dp"
            android:contentDescription="@string/thumbnailFall"
            android:src="@drawable/ic_launcher" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_toEndOf="@id/thumbNailFallDetails"
            android:layout_toRightOf="@id/thumbNailFallDetails"
            android:background="@drawable/frame"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/infoFallDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/Date"
                android:ems="10"
                android:textSize="17sp" >
            </TextView>
            <TextView
                android:id="@+id/infoFallDateValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/infoFallDate"
                android:layout_marginRight="5dp"
                 android:layout_marginEnd="5dp"
                android:gravity="end"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:textSize="17sp" >
            </TextView>
            <TextView
                android:id="@+id/infoFallTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/infoFallDate"
                android:layout_marginTop="15dp"
                android:layout_alignLeft="@id/infoFallDate"
                android:layout_alignStart="@id/infoFallDate"
                android:text="@string/Time"
                android:ems="10"
                android:textSize="17sp" >
            </TextView>
            <TextView
                android:id="@+id/infoFallTimeValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                 android:layout_marginEnd="5dp"
                android:layout_alignBaseline="@id/infoFallTime"
				android:gravity="end"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:textSize="17sp" >
            </TextView>

            <TextView
                android:id="@+id/infoFall02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/infoFallTime"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:textSize="17sp" 
                android:textColorLink="@color/coolGreen"
                android:textColor="@color/coolGreen"
                android:gravity="center">
            </TextView>

            <TextView
                android:id="@+id/infoFall03"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/infoFall02"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                 >
            </TextView>

            <ProgressBar
                android:id="@+id/progressBarFallDetails"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:visibility="gone" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/graphView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical" >
    </LinearLayout>

</LinearLayout>