<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/first_sessiondetails_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardBackgroundColor="#FFFFFF"
    card_view:cardCornerRadius="4dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/thumbnailSessionDetails" >

            
            <TextView
                android:id="@+id/infoStartDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"

                android:text="@string/name"
                android:textColor="@color/material_green_400"
                android:textSize="20sp" />
            
              <TextView
                android:id="@+id/infoStartTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/infoStartDate"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"

                android:text="ciao"
                android:textColor="@color/material_green_400"

                android:textSize="20sp" />
              
            <TextView
                android:id="@+id/infoDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/infoStartTime"
                android:layout_margin="11dp"
                android:text="@string/info"
                android:textColor="@color/black_overlay"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/infoDurationValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/infoDuration"
                android:layout_alignBottom="@+id/infoDuration"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_margin="11dp"
                android:text="@string/info"
                android:textColor="@color/black_overlay"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/infoStartTimeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/infoStartTime"
                android:layout_alignBottom="@+id/infoStartTime"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_margin="11dp"
                android:text="@string/info"
                android:textColor="@color/black_overlay"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/infoStartDateValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/infoStartDate"
                android:layout_alignBottom="@+id/infoStartDate"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_margin="11dp"
                android:text="@string/info"
                android:textColor="@color/black_overlay"
                android:textSize="20sp" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/thumbnailSessionDetails"
            android:layout_width="260dp"
            android:layout_height="260dp"
            android:contentDescription="@string/thumbnail"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="30dp"
            android:src="@drawable/ic_launcher" />
    </RelativeLayout>

</android.support.v7.widget.CardView>
