<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:layout_marginLeft="5dp"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardBackgroundColor="#FFFFFF"
    card_view:cardCornerRadius="4dp" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:clickable="true"
        android:paddingBottom="0dp"
        card_view:cardCornerRadius="4dp" >

        <ImageView
            android:id="@+id/archive_old_session_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="16dp" />

        <RelativeLayout
            android:id="@+id/archive_old_field_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/archive_old_session_icon"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/archive_old_name_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:gravity="left"
                android:singleLine="true"
                android:text="@string/name"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/archive_old_falls_name"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/archive_old_name_name"
                android:gravity="left"
                android:singleLine="true"
                android:text="@string/falls"
                android:textColor="@color/black_overlay"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/archive_old_start_name"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/archive_old_falls_name"
                android:gravity="left"
                android:singleLine="true"
                android:text="@string/date_start_time"
              android:textColor="@color/black_overlay"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/archive_old_falls_description"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_alignBaseline="@+id/archive_old_falls_name"
                android:layout_alignBottom="@+id/archive_old_falls_name"
                android:layout_marginLeft="25dp"
                android:layout_toRightOf="@+id/archive_old_falls_name"
                android:gravity="left"
                android:singleLine="true"
                android:text="ciao"
             android:textColor="@color/black_overlay"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/archive_old_start_description"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_alignLeft="@+id/archive_old_falls_description"
                android:layout_below="@+id/archive_old_falls_description"
                android:gravity="left"
                android:singleLine="true"
                android:text="ciao"
              android:textColor="@color/black_overlay"
                android:textSize="15sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/archive_old_delete_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignBottom="@+id/archive_old_field_description"
            android:layout_alignParentRight="true"
            android:background="@drawable/ic_menu_delete" />

        <Button
            android:id="@+id/archive_old_archive_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignBaseline="@+id/archive_old_delete_button"
            android:layout_alignBottom="@+id/archive_old_delete_button"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/archive_old_delete_button"
            android:background="@drawable/ic_menu_archive" />
    </RelativeLayout>

</android.support.v7.widget.CardView>